Changed Integer class usage to use valueOf rather than creating a new object